src/test/deca/context/valid/conv_float.deca
// Description :
// test d'un ConvFloat
//
// Résultats :
// ok

{
  4 + 3.0;
}
